Edit: fix header on mobile hidden for galleries

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -10,7 +10,7 @@ header {
   position: absolute;
   top: 0;
   width: 100%;
-  z-index: 9;
+  z-index: 1001;
 
   .navbar-default .navbar-toggle {
     padding: 10px 0;
